--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@ body {
   background-color: #999999;
 }
 
+p {
+  text-align: justify;
+}
+
 #top-row {
   margin-bottom: 20px;
 }
@@ -26,16 +30,51 @@ h1 {
   background-color: white;
   margin-top: 25px;
   margin-right: 2%;
+  margin-left: -15px;
   float: left;
 }
 
+#structure1 {
+  margin: 5px;
+}
+
+#structure2 {
+  margin: 5px;
+}
+
+h2 {
+  font-weight: bold;
+}
+
+h4 {
+  font-weight: bold;
+  color: #355275;
+}
+
+.project-row {
+  margin-left: 2%;
+  margin-right: 2%;
+}
+
+.project-tools {
+  float: right;
+  padding-top: 10px;
+  padding-right: 12%;
+}
+
+.project-link {
+  display: block;
+  float: right;
+  margin-left: 5%;
+  margin-right: 0px;
+  padding-top: 5px;
+}
 
 .link-logo {
   display: block;
   height: 50px;
   margin-left: auto;
   margin-right: auto;
-  margin:
   border: none;
 }
 
@@ -57,16 +96,22 @@ body {
   font-weight: bold;
 }
 
-.media img {
-  display: block;
-  height: 250px;
-  float: right;
-  padding: 5px;
-  margin-left: 15px;
-  margin-right: 15px;
-}
+
 
 .job {
   font-weight: bold;
   color: #1f324a;
+}
+
+.interests-content {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.media {
+  display: block;
+  height: 150px;
+  float: left;
+  margin: 5px;
+  padding: 5px;
 }
